generate_app now works

--- a/start/views/base.tmpl
+++ b/start/views/base.tmpl
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Welcome to {{appname}}</title>
+    <title>Welcome to PythonOnWheels</title>
 
     <!-- Bootstrap core CSS -->
     <!--link href="../../dist/css/bootstrap.min.css" rel="stylesheet"-->
@@ -44,7 +44,7 @@
             &#9776;
           </button>
           <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-            <a class="navbar-brand" href="#">{{appname}}</a>
+            <a class="navbar-brand" href="#">PythonOnWheels</a>
             <ul class="nav navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="#">Dashboard (Models)<span class="sr-only">(current)</span></a>
