--- a/start/views/index.tmpl
+++ b/start/views/index.tmpl
@@ -4,9 +4,9 @@
     <!-- Begin page content -->
     <div class="container">
       <div class="m-t-1">
-        <h1> Congratulations to your new PythonOnWheels Application !</h1>
+        <h1> Congratulations</h1> 
+        <p class="lead"> and welcome to your new PythonOnWheels Application !<p>
       </div>
-      <p class="lead">Welcome {{appname}}</p>
       <p class="lead">
         <h5>Next steps:</h5>
         <ul>
