--- a/start/views/index.tmpl
+++ b/start/views/index.tmpl
@@ -11,8 +11,12 @@
         <h5>Next steps:</h5>
         <ul>
           <li>Add a model. <code>generate_model(modelname)</code></li>
+          <li>Init the migration environment. <code>python init_migrations.py</code></li>
+          <li>erate the migrtion for postGen<code>pyhton generate_migration post</code></li>
+          <li>Update teh DB<code>python update-db.py</code></li>
           <li>Add a handler. <code>generate_handler(modelname)</code></li>
           <li>The server should restart automatically.</li>
+          <li>Switch to. <code>http://localhost:8080/modelname</code></li>
         </ul>
       </p>
      
