improved generators. testes migrations and updates. added another react view

--- a/start/views/index.tmpl
+++ b/start/views/index.tmpl
@@ -12,8 +12,8 @@
         <ul>
           <li>Add a model. <code>generate_model(modelname)</code></li>
           <li>Init the migration environment. <code>python init_migrations.py</code></li>
-          <li>erate the migrtion for postGen<code>pyhton generate_migration post</code></li>
-          <li>Update teh DB<code>python update-db.py</code></li>
+          <li>create the migration for the post Model<code>pyhton generate_migration post</code></li>
+          <li>Update the DB<code>python update-db.py</code></li>
           <li>Add a handler. <code>generate_handler(modelname)</code></li>
           <li>The server should restart automatically.</li>
           <li>Switch to. <code>http://localhost:8080/modelname</code></li>
