--- a/start/views/404.tmpl
+++ b/start/views/404.tmpl
@@ -14,7 +14,7 @@
       </div>
       <div class="col-sm-8">
           <p>&nbsp;</p>
-           <img src='{{static_url("images/404_1.png")}}' class="img-responsive center-block" />
+           <img src='{{static_url("images/404.png")}}' class="img-responsive center-block" />
            <p>&nbsp;</p>
            <p class="lead text-xs-center">
             <span class="text-capitalize font-weight-bold">You tried to access:</span> {{url}}
