updated to the current dev status from pow_comment (which is the real life testing pow)

--- a/start/views/thanks.tmpl
+++ b/start/views/thanks.tmpl
@@ -10,28 +10,26 @@
       all heavily supported by a strong community which gives PoW a very reliable, long living and evoluting 
       future.
       </p>
+     
       <p class="lead">
-        Even if this is in python the greatest thanks goes to: <a href="http://rubyonrails.org/"> Ruby on Rails</a>. 
-        This was and is really inspiring.</p>  
-      <p>
-      Thank you all very much.
+      <h2>Thank you all very much.</h2>
       </p>
-      <h4>Based on a strong foundation</h4>
-        <p>
-          <ul>
-            <li><a href="http://www.tornadoweb.org/en/stable/">tornado web</a> - the async & web framework. The base of PoW's core.</li>
-            <li><a href="http://www.sqlalchemy.org/">sqlalchemy</a> THE python SQL ORM</li>
-            <li><a href="http://docs.python-cerberus.org/en/stable/">cerberus schema validation</a></li>
-            <li><a href="http://www.tornadoweb.org/en/stable/guide/templates.html">tornado templates</a></li>
-            <li><a href="https://facebook.github.io/react/">react.js</a> views</li>
-            <!--li>NoSQL with tinyDB <small>(add more like mongoDB easily, just subclass model)</small></li-->
-            <li>Supporting libraries: 
-              <a href="https://pypi.python.org/pypi/dicttoxml">dicttoxml</a>, 
-              <a href="https://github.com/martinblech/xmltodict">xmltodict</a>, 
-              <a href="https://pythonhosted.org/Markdown/">markdown</a>
-            </li>
-          </ul>
-        </p>
-    </div>
+      <div class="row">
+        <div class="col-md-2">
+          &nbsp;
+        </div>
+        <div class="col-md-8">
+        <img src="{{ static_url("images/thanks.png") }}" >
+        </div>
+        <div class="col-md-2">
+          &nbsp;
+        </div>
+      </div> <!-- row -->
+        <hr>
+         <p class="lead">
+          Even if this is in python a <strong> very big thank you </strong> goes to: <a href="http://rubyonrails.org/"> 
+          <img src="{{ static_url("images/rails-logo.svg") }}" width="220" height="78" alt="Ruby on Rails"></a>. 
+          This framework was and is really inspiring.
+          </p>  
   {% end %}
 
