--- a/start/views/base.tmpl
+++ b/start/views/base.tmpl
@@ -17,8 +17,11 @@
     <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet">
     <!-- Custom styles for this template -->
     <!--link href="sticky-footer-navbar.css" rel="stylesheet"-->
-    <link href="{{ static_url("css/sticky-footer-navbar.css") }}" rel="stylesheet">
-
+    <!--link href="{{ static_url("css/sticky-footer-navbar.css") }}" rel="stylesheet"-->
+    
+    <link href="{{ static_url("css/justified-nav.css") }}" rel="stylesheet">
+    <link href="{{ static_url("css/prism.css") }}" rel="stylesheet">
+    <link href="{{ static_url("css/pow.css") }}" rel="stylesheet">
     {% block css %}
       
     {% end %}
@@ -30,61 +33,13 @@
 
   <body>
 
-    <!-- Fixed navbar -->
-    <div class="pos-f-t">
-      <div class="collapse" id="navbar-header">
-        <div class="container bg-inverse p-a-1">
-          <h3>Collapsed content</h3>
-          <p>Togglable via the navbar brand.</p>
-        </div>
-      </div>
-      <nav class="navbar navbar-light navbar-static-top bg-faded">
-        <div class="container">
-          <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
-            &#9776;
-          </button>
-          <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-            <a class="navbar-brand" href="#">PythonOnWheels</a>
-            <ul class="nav navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Dashboard (Models)<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">PythonOnWheels Documentation</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </div>
+    <!--div class="container"  -->
 
-    <!-- Begin page content -->
-    
-      <!-- Your views will be rendered here -->
-      {% block content %}
-      
-      {% end %}
-    <!-- End page content -->
+     {% block content %}
 
-    <!-- Begin page footer -->
-    <footer class="footer">
-      <div class="container">
-        <span class="text-muted">PythonOnWheels 2016 by khz. Open source and free for any use. 
-        Licence: <a href="http://choosealicense.com/licenses/mit/">MIT Licence</a>.
-        </span>
-      </div>
-    </footer>
-    <!-- End page footer -->
+     {% end %}
+    <!-- /div> <!-- /container -->
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ static_url("js/jquery.min.js") }}" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="{{ static_url("js/tether.min.js") }}" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
-    <script src="{{ static_url("js/bootstrap.min.js")}}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{{static_url("js/ie10-viewport-bug-workaround.js")}}"></script>
 
   </body>
 </html>
