--- a/start/views/base.tmpl
+++ b/start/views/base.tmpl
@@ -14,7 +14,7 @@
 
     <!-- Bootstrap core CSS -->
     <!--link href="../../dist/css/bootstrap.min.css" rel="stylesheet"-->
-    <link href="{{ static_url("css/bootstrap.min.css") }}" rel="stylesheet">
+    <link href="{{ static_url("css/bootstrap.css") }}" rel="stylesheet">
     <!-- Custom styles for this template -->
     <!--link href="sticky-footer-navbar.css" rel="stylesheet"-->
     <!--link href="{{ static_url("css/sticky-footer-navbar.css") }}" rel="stylesheet"-->
