updated index page

--- a/start/views/index.tmpl
+++ b/start/views/index.tmpl
@@ -11,12 +11,6 @@
       <div class="jumbotron">
         <img src={{ static_url("images/pow_logo_300.png") }}  style="display: inline-block;" />
            <hr>
-        <p class="lead">The quick and easy generative Webframework for python.</p>
-        <p>
-          <a class="btn btn-lg btn-success" href="https://github.com/pythononwheels/pow_clean" role="button">Check it on Github</a>
-          <a class="btn btn-lg btn-info" href="http://www.pythononwheels.org/docs/gettingstarted" role="button">Getting Started</a>
-        </p>
-
       </div>
       <!-- START THE FEATURETTES -->
 
@@ -26,6 +20,14 @@
           &nbsp;
         </div>
         <div class="col-md-8">
+               <p class="lead">The quick and easy generative Webframework for python.
+        <b>Completely rewritten from scratch, ReSpawning and coming back soon.</b> 
+        <div class="alert alert-success" role="alert">
+          <strong>Release date: 4.4.2017</strong>
+        </div>
+        You can check the current state on <a href="https://github.com/pythononwheels/pow_clean">github</a>.
+        This is also the one serving this site. (commit from 23.3.17)
+        </p>
              <h2 class="featurette-heading">Everything you need on board. <span class="text-muted">Batteries included.</span></h2>
                 <p class="lead">
                   With PythonOnWheels you need no extra tools to start. Everything from DB to Webserver and template engine is included.
