better index page for release

--- a/start/views/footer.tmpl
+++ b/start/views/footer.tmpl
@@ -2,7 +2,7 @@
 <!-- Begin page footer -->
     <footer class="footer">
       <!--div class="container" -->
-        <p class="text-muted">PythonOnWheels 2016 by khz. Open source and free for any use. 
+        <p class="text-muted">PythonOnWheels 2017 by khz. Open source and free for any use. 
         Licence: <a href="http://choosealicense.com/licenses/mit/">MIT Licence</a>.
         </p>
       <!--/div -->
@@ -20,4 +20,6 @@
     <script src="{{ static_url("js/holder.min.js")}}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{{static_url("js/ie10-viewport-bug-workaround.js")}}"></script>
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
