--- a/start/views/index.tmpl
+++ b/start/views/index.tmpl
@@ -23,10 +23,13 @@
                <p class="lead">The quick and easy generative Webframework for python.
         <b>Completely rewritten from scratch, ReSpawning and coming back soon.</b> 
         <div class="alert alert-success" role="alert">
-          <strong>Release date: 4.4.2017</strong>
+          <strong>Release date: 4.4.2017.</strong>
         </div>
-        You can check the current state on <a href="https://github.com/pythononwheels/pow_clean">github</a>.
-        This is also the one serving this site. (commit from 23.3.17)
+        Follow on twitter for updates: <a href="https://twitter.com/pythononwheels" class="twitter-follow-button" data-show-count="false">Follow @pythononwheels</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        You can check the current state on github: <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/pythononwheels/pow_clean" data-icon="octicon-star" data-count-href="/pythononwheels/pow_clean/stargazers" data-count-api="/repos/pythononwheels/pow_clean#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star pythononwheels/pow_clean on GitHub">Star</a>
+        . This is also the one serving this site. (commit from 23.3.17)
         </p>
              <h2 class="featurette-heading">Everything you need on board. <span class="text-muted">Batteries included.</span></h2>
                 <p class="lead">
@@ -39,7 +42,7 @@
                 <li><a href="http://www.tornadoweb.org/en/stable/">tornado</a> webserver</li>
                 <li>Supported Databases
                   <ul> 
-                    <li> SQL: <a href="https://www.sqlalchemy.org/">sqlalchemy</a> ORM (SQLite, MySQL, PostGres, MSSQL, ORacle and more ) </li>
+                    <li> SQL: <a href="https://www.sqlalchemy.org/">sqlalchemy</a> ORM (SQLite, MySQL, PostgreSQL, MS-SQL, Oracle, and more ..) </li>
                     <li> NoSQL: <a href="http://tinydb.readthedocs.io/en/latest/">tinyDB</a>, 
                     <a href="https://www.elastic.co/products/elasticsearch">elasticsearch</a>, (mongoDB coming..) </li>
                   </ul>
@@ -306,11 +309,13 @@ class TestHandler(BaseHandler):
 
       
       <div class="jumbotron">
-        <p class="lead">Try it out now. <span class="text-muted">5 Minutes Tutorial text or video.</span></p>
-        <p>
-          <a class="btn btn-lg btn-success" href="https://github.com/pythononwheels/pow_clean" role="button">Check it on Github</a>
-          <a class="btn btn-lg btn-info" href="http://www.pythononwheels.org/docs/gettingstarted" role="button">Getting Started</a>
-        </p>
+        <div class="alert alert-success" role="alert">
+          <strong>Come back at 4.4.2017 ... check it out ;) </strong>
+        </div>
+        <div class="alert alert-info" role="alert">
+          <strong>Help Wanted! I need you ! Tweet me at <a href="https://twitter.com/intent/tweet?screen_name=pythononwheels" class="twitter-mention-button" data-related="pythononwheels">Tweet to @pythononwheels</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></strong>
+        </div>
       </div>
 
       <!-- /END THE FEATURETTES -->
